# dvbctrl

./: README.md  pyproject.toml  recordtest.py
dvbctrl/: colours.py  commands.py  connection.py  dvbstreamer.py  dvbv5.py  errors.py  recorder.py  shell.py
tests/: conftest.py  dvbs_setup.py  test_3_connection.py  test_commands.py  test_connection.py  test_dvbctrl.py  test_dvbstreamer.py  test_recorder.py
