[tool.poetry]
name = "dvbctrl"
version = "0.2.6"
description = ""
authors = ["ccdale <chris.allison@hivehome.com>"]

[tool.poetry.dependencies]
python = "^3.10"
psutil = "^5.9.1"
SQLAlchemy = "^1.4.37"
pyaml = "^21.10.1"

[tool.poetry.dev-dependencies]
pytest = "^7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
